[package]
name = "feature_flags"
version = "0.1.0"
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "db-init"
path = "src/bin/db-init.rs"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.warp]
version = "0.3"
features = ["default"] 


[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled-full"]
