[package]
name = "feature_flags"
version = "0.1.0"
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.warp]
version = "0.3"
features = ["default"] 

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled-full"]

[dependencies.clap]
version = "2.33.3"
features = ["default", "wrap_help"]

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"
